feat(deploy): configure env vars for Render + Neon production deploy
- application.yml: replace hardcoded DB credentials, port and JWT secret
  with environment variables (DATABASE_URL, DATABASE_USERNAME,
  DATABASE_PASSWORD, JWT_SECRET, JWT_EXPIRATION_MS, PORT)
- SecurityConfig.java: read CORS allowed origins from hms.cors.allowed-origins
  property (backed by CORS_ALLOWED_ORIGINS env var) for dynamic configuration
- Add render.yaml for Infrastructure-as-Code deploy on Render (free tier)
- Add .env.example with documentation of all required environment variables

Local defaults preserved: app still works without any env vars set.